added background color

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html{
 body{
     margin: 0;
     font-family: Shalimar, serif;
-    background-color: whitesmoke;
+    background-color: rgba(110, 95, 255,0.7);
 }
 
 h1 {
